# NfdTgTagBot

./: .env  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  loader.py  main.py  models.py  pyproject.toml
db/: db_api.py  dependencies.py  dsn.py  models.py
handlers/: chat_handlers.py
migrations/: env.py
migrations/versions/: e17c0a357e66_.py
postgres_volume/: postmaster.pid
postgres_volume/base/13423/: 2619
postgres_volume/global/: 1260  1262  2671  2676  pg_control
postgres_volume/pg_stat_tmp/: global.stat
