[tool.poetry]
name = "tgtagbot"
version = "0.1.0"
description = ""
authors = ["Iurii Nefedov <y.nefedov.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.17.1"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.28"}
pydantic = "^1.8.2"
asyncpg = "^0.25.0"
psycopg2-binary = "2.9.2"
python-dotenv = "^0.19.2"
alembic = "^1.7.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
